# filianore-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: cpm.cmake
include/core/: elemental.h
include/filianore/: elemental.h
include/filianore/accel/: bvh.h
include/filianore/bvh/: bvh.h  bvh_alg_sah.h  bvh_builder_topdown.h  bvh_platform.h  bvh_prog_binned_sah.h  bvh_utils.h  node_intersectors.h  primitive_intersectors.h  single_ray_traverser.h
include/filianore/bvhx/: binnedsahbuilder.h  binnedsahbuildtask.h  bvhx.h  nodeintersectors.h  primitiveintersectionresult.h  primitiveintersectors.h  raytraverser.h  topdownbuilder.h  utils.h
include/filianore/camera/: physical.h
include/filianore/cameras/: physical.h
include/filianore/color/: basespectrum.h  cie.h  metallurgy.h  principalspectrum.h  rgb.h  spectrum.h  spectrumcomplete.h  spectrumfoundation.h  spectruminits.h  spectrumoperations.h
include/filianore/core/: aabb.h  bsdf.h  bxdf.h  camera.h  elemental.h  fresnel.h  illuminant.h  integrator.h  interaction.h  material.h  memory.h  microfacet.h  phase.h  primitive.h  ray.h  rect.h  renderer.h  renderparams.h  rng.h  sampler.h  sampling.h  scene.h  shadingcore.h  shadingframe.h  shape.h  texture.h  util.h
include/filianore/creators/: shapecreator.h  spdloader.h
include/filianore/ext/: pcg32.h  stb_image.h
include/filianore/illuminants/: diffusearea.h  directional.h  point.h  spot.h
include/filianore/integrators/: path.h  pathintegrator.h
include/filianore/konsortium/: array.h  array_base.h  array_sse_f.h  array_sse_i.h  vec.h  vecnew.h
include/filianore/materials/: lambert.h  matte.h  metal.h  mirror.h  plastic.h  standardsurface.h
include/filianore/math/: aabb.h  matrix.h  ray.h  static_array.h  transform.h  vec.h  vec3_math.h  vecnew.h
include/filianore/maths/: mathutils.h  matrix.h  scalar.h  static_array.h  transform.h  vec3_math.h
include/filianore/media/: henyeygreenstein.h
include/filianore/render/: camera.h  sampler.h  sampling.h  shape.h
include/filianore/sampler/: global.h  pixel.h  stratified.h
include/math/: vec.h
src/: CMakeLists.txt  elemental.cpp
src/accel/: bvh.cpp
src/bvhx/: bvhx.cpp  nodeintersectors.cpp  primitiveintersectors.cpp  raytraverser.cpp  utils.cpp
src/cameras/: physical.cpp
src/color/: metallurgy.cpp  spectruminits.cpp  spectrumoperations.cpp
src/core/: bsdf.cpp  elemental.cpp  fresnel.cpp  illuminant.cpp  integrator.cpp  interaction.cpp  material.cpp  memory.cpp  microfacet.cpp  primitive.cpp  renderer.cpp  sampler.cpp  sampling.cpp  scene.cpp  shape.cpp  texture.cpp
src/creators/: shapecreator.cpp
src/ext/: pcg32.h
src/filianore/: CMakeLists.txt
src/filianore/accel/: bvh.cpp  bvh.h
src/filianore/bvh/: bvh.cpp  bvh.h  flbvh.cpp  flbvh.h
src/filianore/cameras/: camera.h  physical.cpp  physical.h
src/filianore/color/: cie.h  metallurgy.cpp  principalspectrum.h  spectruminits.cpp  spectrumoperations.cpp  spectrumoperations.h
src/filianore/core/: aabb.h  bsdf.cpp  camera.h  elemental.cpp  elemental.h  filianore.cpp  filianore.h  fresnel.h  illuminant.cpp  integrator.cpp  interaction.cpp  interaction.h  material.cpp  memory.cpp  memory.h  microfacet.cpp  microfacet.h  primitive.cpp  primitive.h  renderparams.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  scene.cpp  scene.h  shadingcore.h  shape.cpp  shape.h  texture.h
src/filianore/creators/: shapecreator.cpp  spdloader.h
src/filianore/illuminants/: diffusearea.cpp  diffusearea.h  directional.cpp  directional.h  illuminant.cpp  illuminant.h  point.cpp  point.h  spot.cpp  spot.h
src/filianore/integrators/: integrator.cpp  integrator.h  normalintegrator.cpp  normalintegrator.h  pathintegrator.cpp  pathintegrator.h
src/filianore/materials/: lambert.cpp  standardsurface.cpp  standardsurface.h
src/filianore/math/: scalar.h  static_array.h
src/filianore/maths/: affine.h  geometry.h  mathutils.h  matrix.h  transform.h  vec.h
src/filianore/memory/: memory.h
src/filianore/samplers/: global.cpp  global.h  pixel.cpp  pixel.h  stratified.cpp  whitenoise.cpp
src/filianore/sampling/: sampler.h  sampling.h
src/filianore/sampling/samplers/: whitenoise.h
src/filianore/shading/: bsdf.cpp  bsdf.h
src/filianore/shading/bxdfs/: bxdf.h  clearcoat.cpp  clearcoat.h  diffusetransmission.cpp  diffusetransmission.h  lambert.cpp  lambert.h  microfacetreflection.cpp  microfacetreflection.h  orennayar.cpp  orennayar.h
src/filianore/shading/closures/: fresnelblendeddiffspec.cpp  fresnelblendeddiffspec.h  fresnelspecular.cpp  fresnelspecular.h  microfacettransmission.cpp  microfacettransmission.h
src/filianore/shading/fresnel/: fresnel.h  fresnelconductor.cpp  fresnelconductor.h  fresneldielectric.cpp  fresneldielectric.h  fresnelnull.cpp  fresnelnull.h  schlickdielectric.cpp  schlickdielectric.h  schlickmetallic.cpp  schlickmetallic.h  thinfilm.cpp  thinfilm.h
src/filianore/shading/materials/: lambert.cpp  lambert.h  material.cpp  material.h  standardsurface.cpp  standardsurface.h
src/filianore/shading/microfacets/: beckmann.cpp  beckmann.h  estevez.cpp  estevez.h  ggx.cpp  ggx.h  microfacet.cpp  microfacet.h
src/filianore/shading/textures/: constant.h  imagemap.cpp  imagemap.h  texture.h
src/filianore/shapes/: shape.cpp  shape.h  triangle.cpp  triangle.h
src/filianore/textures/: constant.h  imagemap.cpp  imagemap.h
src/illuminants/: diffusearea.cpp  directional.cpp  point.cpp  spot.cpp
src/integrators/: path.cpp  path_integrator.cpp  pathintegrator.cpp
src/materials/: lambert.cpp  matte.cpp  metal.cpp  mirror.cpp  plastic.cpp  standardsurface.cpp
src/math/: vec.cpp
src/media/: henyeygreenstein.cpp
src/render/: sampler.cpp
src/samplers/: global.cpp  pixel.cpp  stratified.cpp  whitenoise.cpp
src/shading/: beckmann.cpp  fresneldielectric.cpp  lambertbrdf.cpp  lambertreflection.cpp  microfacetreflection.cpp  orennayarbrdf.cpp  specularreflection.cpp  speculartransmission.cpp  trowbridgereitzdistribution.cpp
src/shapes/: triangle.cpp
src/textures/: constant.cpp  imagemap.cpp
(+64 files in other folders)
